[gd_scene load_steps=5 format=3 uid="uid://wak3vuvwex4l"]

[ext_resource type="Script" path="res://ui/battle_prep_new/unit_army_panel/unit_army_panel_container.gd" id="1_kkdmy"]
[ext_resource type="Texture2D" uid="uid://da5b4ie8i1bal" path="res://resources/sprites/units/marauder.png" id="3_txfkw"]
[ext_resource type="Texture2D" uid="uid://baox2225sojam" path="res://resources/sprites/icons/Checked.png" id="4_bftfq"]
[ext_resource type="Texture2D" uid="uid://cp5kul16nbb0c" path="res://resources/sprites/icons/Group 378.png" id="5_m2x72"]

[node name="UnitArmyPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 50)
offset_right = 302.0
offset_bottom = 52.0
focus_mode = 2
script = ExtResource("1_kkdmy")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 50.0
theme_override_constants/separation = 60
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2

[node name="UnitIcon" type="TextureRect" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("3_txfkw")
expand_mode = 2
stretch_mode = 3

[node name="UnitNameLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "Robert Bob Jr"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_icons/checked = ExtResource("4_bftfq")
theme_override_icons/unchecked = ExtResource("5_m2x72")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
